--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start-stage": "npm run build-stage && NODE_ENV=stage node index.js",
     "build:clean": "rimraf dist/client/static",
     "dev": "npm run build:clean && NODE_ENV=development node index.js",
-    "test": "nyc mocha --require ignore-styles test/utils/setup.js --compilers js:babel-register test/**/*Spec.jsx"
+    "test": "nyc --reporter=html --reporter=text mocha --require ignore-styles test/utils/setup.js --compilers js:babel-register test/**/*Spec.jsx"
   },
   "dependencies": {
     "axios": "*",
@@ -78,6 +78,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-15": "^1.0.5",
@@ -115,4 +116,3 @@
     "url-loader": "*"
   }
 }
-
