--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 service_name: travis pro
+repo_token: eQlnN0RNBASc4Basojq0YrnqiGDzebr9N
+after_script: NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 node_js:
   - "iojs"
   - "7"
