--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 service_name: travis pro
 repo_token: eQlnN0RNBASc4Basojq0YrnqiGDzebr9N
+script: npm run script test
 after_script: cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 node_js:
   - "iojs"
