--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-simple-router": "^0.1.8",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.3.0",
+    "redux-simple-router": "^2.0.4",
     "regenerator-runtime": "^0.11.0",
     "sass-loader": "^6.0.6",
     "sinon": "^4.1.2",
