--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "style-loader": "*",
     "url-loader": "*",
     "webpack": "^1.13.1",
-    "yargs": "^10.0.3"
+    "yargs": "^10.0.3",
+    "stripe": "^5.3.0"
   },
   "devDependencies": {
     "axios-http-adapter": "*",
