--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "karma-webpack": "^2.0.6",
     "lodash": "*",
     "mocha": "^4.0.1",
+    "moment": "^2.19.3",
     "moxios": "*",
     "nock": "^9.1.3",
     "nyc": "^11.3.0",
@@ -125,6 +126,7 @@
     "sinon": "^4.1.2",
     "stripe": "^5.3.0",
     "style-loader": "*",
+    "table-to-excel": "^1.0.6",
     "url-loader": "*"
   }
 }
