--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "url-loader": "*",
     "webpack": "^1.13.1",
     "yargs": "^10.0.3",
-    "stripe": "^5.3.0"
+    "stripe": "^5.3.0",
+    "table-to-excel": "^1.0.6"
   },
   "devDependencies": {
     "axios-http-adapter": "*",
