--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.6",
-    "lodash": "*",
+    "lodash": "^4.17.4",
     "mocha": "^4.0.1",
     "moment": "^2.19.3",
     "moxios": "*",
