--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "enzyme-adapter-react-15": "^1.0.5",
     "enzyme-redux": "^0.1.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "hapi-gate": "^1.0.2",
     "ignore-styles": "^5.0.1",
     "istanbul": "^0.4.5",
     "jest": "^21.2.1",
