--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "webpack": "^1.13.1",
     "yargs": "^10.0.3",
     "stripe": "^5.3.0",
-    "table-to-excel": "^1.0.6"
+    "table-to-excel": "^1.0.6",
+    "hapi-gate": "^1.0.2"
   },
   "devDependencies": {
     "axios-http-adapter": "*",
