--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-loader": "*",
     "hapi": "^13.4.1",
     "hapi-auth-cookie": "^6.1.1",
+    "hapi-gate": "^1.0.2",
     "hapi-require-https": "^2.1.0",
     "hapi-webpack-plugin": "^1.3.0",
     "i18next": "*",
@@ -53,6 +54,7 @@
     "react-checkbox": "*",
     "react-dom": "^15.1.0",
     "react-i18next": "*",
+    "react-paypal-express-checkout": "*",
     "react-redux": "^4.4.5",
     "react-responsive": "*",
     "react-router": "^2.5.1",
@@ -67,13 +69,12 @@
     "shortid": "*",
     "simple-peer": "*",
     "socket.io": "*",
+    "stripe": "^5.3.0",
     "style-loader": "*",
+    "table-to-excel": "^1.0.6",
     "url-loader": "*",
     "webpack": "^1.13.1",
-    "yargs": "^10.0.3",
-    "stripe": "^5.3.0",
-    "table-to-excel": "^1.0.6",
-    "hapi-gate": "^1.0.2"
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "axios-http-adapter": "*",
@@ -82,6 +83,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "react-paypal-express-checkout": "*",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "css-loader": "^0.23.1",
