--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react": "^15.1.0",
     "react-burger-menu": "*",
     "react-checkbox": "*",
-    "react-dom": "^15.1.0",
+    "react-dom": "*",
     "react-i18next": "*",
     "react-paypal-express-checkout": "*",
     "react-redux": "^4.4.5",
@@ -74,7 +74,9 @@
     "table-to-excel": "^1.0.6",
     "url-loader": "*",
     "webpack": "^1.13.1",
-    "yargs": "^10.0.3"
+    "yargs": "^10.0.3",
+    "react-dom": "*",
+    "country-list": "*"
   },
   "devDependencies": {
     "axios-http-adapter": "*",
@@ -120,7 +122,7 @@
     "postcss-loader": "^0.4.3",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react-dom": "*",
     "react-simple-router": "^0.1.8",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.3.0",
@@ -132,6 +134,7 @@
     "stripe": "^5.3.0",
     "style-loader": "*",
     "table-to-excel": "^1.0.6",
-    "url-loader": "*"
+    "url-loader": "*",
+    "country-list": "*"
   }
 }
