--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-burger-menu": "*",
     "react-checkbox": "*",
     "react-dom": "15.6.0",
-    "react-i18next": "*",
+    "react-i18next": "7.0.0",
     "react-paypal-express-checkout": "*",
     "react-redux": "^4.4.5",
     "react-responsive": "*",
