--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Counceling",
   "main": "index.js",
-  "author": "Daniel Jansson",
+  "author": "Daniel Wallin",
   "repository": {
     "type": "git",
     "url": "git@github.com:dhanisthlm/Feelgood.git"
@@ -11,12 +11,13 @@
   "scripts": {
     "mongo:start": "mongod --config /usr/local/etc/mongod.conf --fork --logpath /dev/null",
     "mongo:stop": "mongo admin --eval 'db.shutdownServer()' > /dev/null",
+    "build-dev-server": "webpack --config ./webpack/server.config.dev.js --progress --profile --colors",
     "build-prod": "webpack --config ./webpack/config.prod.js --progress --profile --colors",
     "build-stage": "webpack --config ./webpack/config.stage.js --progress --profile --colors",
-    "start": "npm run build-prod && NODE_ENV=production node index.js",
+    "start": "npm run build-prod && npm run build-dev-server && NODE_ENV=production node index.js",
     "start-stage": "npm run build-stage && NODE_ENV=stage node index.js",
     "build:clean": "rimraf dist/client/static",
-    "dev": "npm run build:clean && NODE_ENV=development node index.js",
+    "dev": "npm run build:clean && npm run build-dev-server && NODE_ENV=development node index.js",
     "test": "nyc --reporter=html --reporter=text mocha --require ignore-styles test/utils/setup.js --compilers js:babel-register test/**/*Spec.jsx"
   },
   "dependencies": {
@@ -30,16 +31,21 @@
     "babel-register": "^6.9.0",
     "classnames": "*",
     "config": "^1.21.0",
+    "country-list": "*",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "*",
+    "global": "^4.3.2",
     "hapi": "^13.4.1",
     "hapi-auth-cookie": "^6.1.1",
     "hapi-gate": "^1.0.2",
     "hapi-require-https": "^2.1.0",
     "hapi-webpack-plugin": "^1.3.0",
     "i18next": "*",
+    "ignore-styles": "^5.0.1",
     "image-webpack-loader": "*",
     "inert": "^4.0.0",
+    "isomorphic-loader": "^2.0.1",
     "joi": "^9.0.1",
     "joi-browser": "^9.0.0",
     "joi-validation-strategy": "^0.3.3",
@@ -65,6 +71,7 @@
     "redux-simple-router": "^2.0.4",
     "redux-thunk": "^2.1.0",
     "request": "*",
+    "require-from-string": "^2.0.2",
     "rimraf": "^2.5.2",
     "shortid": "*",
     "simple-peer": "*",
@@ -72,27 +79,34 @@
     "stripe": "^5.3.0",
     "style-loader": "*",
     "table-to-excel": "^1.0.6",
+    "url": "^0.11.0",
     "url-loader": "*",
-    "webpack": "^1.13.1",
-    "yargs": "^10.0.3",
-    "react-dom": "15.6.0",
-    "country-list": "*"
+    "webpack": "^3.2.0",
+    "webpack-externals-plugin": "^1.0.0",
+    "webpack-node-externals": "^1.7.2",
+    "window-or-global": "^1.0.1",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "axios-http-adapter": "*",
+    "babel-core": "^6.26.3",
     "babel-jest": "^21.2.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react-paypal-express-checkout": "*",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
+    "compression-webpack-plugin": "^1.1.11",
+    "country-list": "*",
     "coveralls": "^3.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-15": "^1.0.5",
     "enzyme-redux": "^0.1.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "hapi-gate": "^1.0.2",
     "ignore-styles": "^5.0.1",
     "istanbul": "^0.4.5",
@@ -116,25 +130,28 @@
     "moment": "^2.19.3",
     "moxios": "*",
     "nock": "^9.1.3",
+    "node-sass": "^4.9.0",
     "nyc": "^11.3.0",
     "phantomjs": "^2.1.7",
     "phantomjs-polyfill": "0.0.2",
-    "postcss-loader": "^0.4.3",
+    "postcss-loader": "^0.4.4",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "15.6.0",
+    "react-paypal-express-checkout": "*",
     "react-simple-router": "^0.1.8",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.3.0",
     "redux-simple-router": "^2.0.4",
     "redux-test-utils": "^0.2.2",
     "regenerator-runtime": "^0.11.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "sinon": "^4.1.2",
     "stripe": "^5.3.0",
-    "style-loader": "*",
+    "style-loader": "^0.21.0",
     "table-to-excel": "^1.0.6",
-    "url-loader": "*",
-    "country-list": "*"
+    "url-loader": "^1.0.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
