--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,12 @@
   "presets": ["react", "es2015", "stage-2"],
   "env": {
     "test": {
-      "plugins": [ "istanbul" ]
+      "plugins": [
+      	"istanbul",
+      	["babel-plugin-transform-builtin-extend", {
+            globals: ["Error", "Array"]
+        }]
+      ]
     }
   }
 }
