--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^4.4.5",
     "react-responsive": "*",
     "react-router": "^2.5.1",
+    "react-router-redux": "^4.0.8",
     "react-stripe-elements": "^1.2.1",
     "react-validation-mixin": "^5.4.0",
     "redux": "^3.5.2",
