--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.9.0",
-    "classnames": "*",
+    "compression-webpack-plugin": "^1.1.11",
     "config": "^1.21.0",
     "country-list": "*",
     "css-loader": "^0.23.1",
@@ -39,11 +39,9 @@
     "hapi": "^13.4.1",
     "hapi-auth-cookie": "^6.1.1",
     "hapi-gate": "^1.0.2",
-    "hapi-require-https": "^2.1.0",
     "hapi-webpack-plugin": "^1.3.0",
     "i18next": "*",
     "ignore-styles": "^5.0.1",
-    "image-webpack-loader": "*",
     "inert": "^4.0.0",
     "isomorphic-loader": "^2.0.1",
     "joi": "^9.0.1",
@@ -52,17 +50,15 @@
     "json-loader": "*",
     "modernizr-webpack-plugin": "*",
     "mongoose": "^4.5.3",
-    "opentok": "^2.5.0",
-    "opentok-react": "*",
+    "npm-check": "^5.7.1",
     "rc-checkbox": "",
     "react": "^15.1.0",
-    "react-burger-menu": "*",
+    "react-async-script-loader": "^0.3.0",
     "react-checkbox": "*",
-    "react-dom": "15.6.0",
+    "react-dom": "^15.6.0",
     "react-i18next": "^1.6.2",
     "react-paypal-express-checkout": "*",
     "react-redux": "^4.4.5",
-    "react-responsive": "*",
     "react-router": "^2.5.1",
     "react-router-redux": "^4.0.8",
     "react-stripe-elements": "^1.2.1",
@@ -75,7 +71,6 @@
     "require-from-string": "^2.0.2",
     "rimraf": "^2.5.2",
     "shortid": "*",
-    "simple-peer": "*",
     "socket.io": "*",
     "stripe": "^5.3.0",
     "style-loader": "*",
@@ -83,13 +78,13 @@
     "url": "^0.11.0",
     "url-loader": "*",
     "webpack": "^3.2.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-externals-plugin": "^1.0.0",
     "webpack-node-externals": "^1.7.2",
     "window-or-global": "^1.0.1",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
-    "axios-http-adapter": "*",
     "babel-core": "^6.26.3",
     "babel-jest": "^21.2.0",
     "babel-loader": "^6.4.1",
@@ -100,7 +95,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "compression-webpack-plugin": "^1.1.11",
-    "country-list": "*",
     "coveralls": "^3.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^3.1.1",
@@ -108,14 +102,11 @@
     "enzyme-redux": "^0.1.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "hapi-gate": "^1.0.2",
     "ignore-styles": "^5.0.1",
     "istanbul": "^0.4.5",
-    "jest": "^21.2.1",
     "jsdom": "^11.3.0",
     "jsdom-browser": "^0.6.0",
     "jsdomify": "^3.1.1",
-    "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
@@ -130,11 +121,8 @@
     "mocha": "^4.0.1",
     "moment": "^2.19.3",
     "moxios": "*",
-    "nock": "^9.1.3",
     "node-sass": "^4.9.0",
     "nyc": "^11.3.0",
-    "phantomjs": "^2.1.7",
-    "phantomjs-polyfill": "0.0.2",
     "postcss-loader": "^0.4.4",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.6.2",
@@ -146,7 +134,6 @@
     "redux-simple-router": "^2.0.4",
     "redux-test-utils": "^0.2.2",
     "regenerator-runtime": "^0.11.0",
-    "sass-loader": "^6.0.7",
     "sinon": "^4.1.2",
     "stripe": "^5.3.0",
     "style-loader": "^0.21.0",
